<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background">


    <EditText
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_username"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        android:autofillHints="username"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_password"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="password"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="263dp"
        android:layout_height="174dp"
        android:layout_marginTop="52dp"
        android:inputType="textPassword"
        android:src="@drawable/music_icon"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_iconDescription"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/turquoise"
        android:text="@string/app_login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attemptCount" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_signup"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.0"
        android:backgroundTint="@color/turquoise"
        />

    <TextView
        android:id="@+id/attemptCount"
        android:textAlignment="center"
        android:layout_width="260dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textSize="7pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>