<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/background">


    <EditText
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_username"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="name"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_password"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="password"
        />

    <EditText
        android:id="@+id/passwordAgain"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_password"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_firstname"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordAgain"
        android:autofillHints="name"
        />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_lastname"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:autofillHints="name"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname"
        android:autofillHints="emailAddress"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/turquoise"
        android:hint="@string/app_phone"
        android:inputType="phone"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="phone"
        />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_send"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.0"
        android:backgroundTint="@color/turquoise"
        />


</androidx.constraintlayout.widget.ConstraintLayout>